--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-IQAIR_API_KEY=634627f6-994d-4b92-9b9f-00c62980385d
-GOOGLE_APPLICATION_CREDENTIALS = "G:\Semester 7\MLOPs\course-project-ali0887\mlops-final-project-444714-c95878d4542f.json"
+IQAIR_API_KEY
+GOOGLE_APPLICATION_CREDENTIALS
